testdata/err/string_literal_unterminated_unicode_end.err.txt
error: unexpected token
- testdata/err/string_literal_unterminated_unicode_end.tn:1:16
1 | main = || -> { "foo \u{fffff" };
  |                ^^^^^^^^^^^^^^
help: valid tokens at this point: ["}", IdentifierName]
